--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "aquatic-pioneer",
    "metadata": {
     "pycharm": {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "modern-journalist",
    "metadata": {
     "pycharm": {
@@ -32,10 +32,12 @@
    },
    "outputs": [],
    "source": [
+    "article_text = ''\n",
     "with open('raft.txt') as f:\n",
     "    article_text += \" \".join(line.strip() for line in f)      \n",
     "\n",
     "article_text = article_text.lower()\n",
+    "# remove special characters and empty spaces\n",
     "article_text = re.sub(r'\\[[0-9]*\\]', ' ', article_text)\n",
     "article_text = re.sub(r'\\s+', ' ', article_text)\n",
     "\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "discrete-birth",
    "metadata": {
     "pycharm": {
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 13,
    "id": "significant-danger",
    "metadata": {
     "pycharm": {
@@ -83,6 +85,8 @@
     "greeting_responses = [\"Hi\", \"Nice to meet you!\", \"*nods*\", \"Hello!\", \"Welcome!\"]\n",
     "\n",
     "def generate_greeting_response(greeting):\n",
+    "    \"\"\" return a random greeting from a pre-defined list \"\"\"\n",
+    "\n",
     "    for token in greeting.split():\n",
     "        if token.lower() in greeting_inputs:\n",
     "            return random.choice(greeting_responses)"
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "id": "cosmetic-afternoon",
    "metadata": {
     "pycharm": {
@@ -100,11 +104,16 @@
    "outputs": [],
    "source": [
     "def generate_response(user_input):\n",
-    "    bot_response = ''\n",
-    "    article_sentences.append(user_input)\n",
+    "    \"\"\" get cosine similarity of user input and compare with article sentence tokens,\n",
+    "     return the token with the highest cosine score \"\"\"\n",
     "\n",
+    "    bot_response = ''\n",
+    "    # add user input to list of tokens for comparison\n",
+    "    article_sentences.append(user_input)\n",
     "    word_vectorizer = TfidfVectorizer(tokenizer=clean_input, stop_words='english')\n",
+    "    # convert tokens into a vector\n",
     "    all_word_vectors = word_vectorizer.fit_transform(article_sentences)\n",
+    "    # find cosine similarity of user input (last item in list) with article vectors\n",
     "    similar_vector_values = cosine_similarity(all_word_vectors[-1], all_word_vectors)\n",
     "    similar_sentence_number = similar_vector_values.argsort()[0][-2]\n",
     "\n",
@@ -122,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "id": "oriental-wilson",
    "metadata": {
     "pycharm": {
@@ -137,12 +146,14 @@
       "Hi, my name is Bot and I'm an expert at Raft! \n",
       "Ask me anything about the Raft paper published in 2014.\n",
       "To end our conversation, type 'bye' or just thank me ;)\n",
-      "leader election\n",
-      "Bot: in this case the term will end with no leader; a new term (with a new election) 5.2 leader election raft uses a heartbeat mechanism to trigger leader election.\n",
-      "log replication\n",
+      "How does a leader get elected?\n",
+      "Bot: 4 election safety: at most one leader can be elected in a given term.\n",
+      "Tell me about log replication\n",
       "Bot: for example, in raft we separated leader election, log replication, safety, and membership changes.\n",
-      "bye\n",
-      "Bot: Bye bye!\n"
+      "What states can a server be in?\n",
+      "Bot: at any given time each server is in one of three states: leader, follower, or candidate.\n",
+      "thanks\n",
+      "Bot: You're welcome!\n"
      ]
     }
    ],
@@ -152,20 +163,20 @@
     "      \"Ask me anything about the Raft paper published in 2014.\\n\"\n",
     "      \"To end our conversation, type 'bye' or just thank me ;)\")\n",
     "\n",
-    "while(continue_dialogue == True):\n",
-    "    human_text = input()\n",
-    "    human_text = human_text.lower()\n",
-    "    if human_text != 'bye':\n",
-    "        if human_text == 'thanks' or human_text == 'thank you very much' or human_text == 'thank you':\n",
+    "while continue_dialogue:\n",
+    "    user_input = input()\n",
+    "    user_input = user_input.lower()\n",
+    "    if user_input != 'bye':\n",
+    "        if user_input == 'thanks' or user_input == 'thank you':\n",
     "            continue_dialogue = False\n",
     "            print(\"Bot: You're welcome!\")\n",
     "        else:\n",
-    "            if greetings(human_text) != None:\n",
-    "                print(\"Bot: \" + greetings(human_text))\n",
+    "            if generate_greeting_response(user_input) is not None :\n",
+    "                print(\"Bot: \" + generate_greeting_response(user_input))\n",
     "            else:\n",
     "                print(\"Bot: \", end=\"\")\n",
-    "                print(generate_response(human_text))\n",
-    "                article_sentences.remove(human_text)\n",
+    "                print(generate_response(user_input))\n",
+    "                article_sentences.remove(user_input)\n",
     "    else:\n",
     "        continue_dialogue = False\n",
     "        print(\"Bot: Bye bye!\")"
