changed corpus to csv

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,20 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "aquatic-pioneer",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import nltk\n",
-    "import numpy as np\n",
     "import random\n",
     "import string\n",
     "import re\n",
+    "import pandas as pd\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.metrics.pairwise import cosine_similarity"
@@ -23,36 +19,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "modern-journalist",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "when is tutoring?what time does tutoring start?is tutoring happening today?how do i get tutoring?where is tutoring?what do i type to get tutoring?who are the tutors?who is tutoring tonight?can i request a tutor?what is tutoring?tell me about tutoring?what happens when i go to tutoring?what should i expect in tutoring?are there any rules for tutoring?\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "article_text = ''\n",
-    "with open('raft.txt') as f:\n",
-    "    article_text += \" \".join(line.strip() for line in f)      \n",
+    "data = pd.read_csv('tutoring_data.csv')\n",
+    "q_string = ''\n",
+    "for i, row in data.iterrows():\n",
+    "    q_string = q_string + row.loc['Question'] + \" \"\n",
     "\n",
-    "article_text = article_text.lower()\n",
+    "q_string = q_string.lower()\n",
     "# remove special characters and empty spaces\n",
-    "article_text = re.sub(r'\\[[0-9]*\\]', ' ', article_text)\n",
-    "article_text = re.sub(r'\\s+', ' ', article_text)\n",
+    "q_string = re.sub(r'\\[[0-9]*\\]', ' ', q_string)\n",
+    "q_string = re.sub(r'\\s+', ' ', q_string)\n",
     "\n",
-    "article_sentences = nltk.sent_tokenize(article_text)"
+    "q_tokens = nltk.sent_tokenize(q_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "discrete-birth",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def clean_input(text):\n",
@@ -72,13 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "significant-danger",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "greeting_inputs = (\"hey\", \"good morning\", \"good evening\", \"morning\", \"evening\", \"hi\", \"hello\")\n",
@@ -94,13 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "cosmetic-afternoon",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_response(user_input):\n",
@@ -109,10 +98,10 @@
     "\n",
     "    bot_response = ''\n",
     "    # add user input to list of tokens for comparison\n",
-    "    article_sentences.append(user_input)\n",
+    "    q_tokens.append(user_input)\n",
     "    word_vectorizer = TfidfVectorizer(tokenizer=clean_input, stop_words='english')\n",
     "    # convert tokens into a vector\n",
-    "    all_word_vectors = word_vectorizer.fit_transform(article_sentences)\n",
+    "    all_word_vectors = word_vectorizer.fit_transform(q_tokens)\n",
     "    # find cosine similarity of user input (last item in list) with article vectors\n",
     "    similar_vector_values = cosine_similarity(all_word_vectors[-1], all_word_vectors)\n",
     "    similar_sentence_number = similar_vector_values.argsort()[0][-2]\n",
@@ -125,19 +114,16 @@
     "        bot_response += \"Sorry, I don't understand.\"\n",
     "        return bot_response\n",
     "    else:\n",
-    "        bot_response += article_sentences[similar_sentence_number]\n",
+    "        # output corresponding answer from answer column\n",
+    "        bot_response += data.at[similar_sentence_number, 'Answer']\n",
     "        return bot_response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "oriental-wilson",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -146,21 +132,27 @@
       "Hi, my name is Bot and I'm an expert at Raft! \n",
       "Ask me anything about the Raft paper published in 2014.\n",
       "To end our conversation, type 'bye' or just thank me ;)\n",
-      "How does a leader get elected?\n",
-      "Bot: 4 election safety: at most one leader can be elected in a given term.\n",
-      "Tell me about log replication\n",
-      "Bot: for example, in raft we separated leader election, log replication, safety, and membership changes.\n",
-      "What states can a server be in?\n",
-      "Bot: at any given time each server is in one of three states: leader, follower, or candidate.\n",
-      "thanks\n",
-      "Bot: You're welcome!\n"
+      "Bot: Sorry, I don't understand.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-29-cbf3d04ccb29>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      6\u001B[0m \u001B[0;32mwhile\u001B[0m \u001B[0mcontinue_dialogue\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 7\u001B[0;31m     \u001B[0muser_input\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0minput\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      8\u001B[0m     \u001B[0muser_input\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0muser_input\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mlower\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      9\u001B[0m     \u001B[0;32mif\u001B[0m \u001B[0muser_input\u001B[0m \u001B[0;34m!=\u001B[0m \u001B[0;34m'bye'\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001B[0m in \u001B[0;36mraw_input\u001B[0;34m(self, prompt)\u001B[0m\n\u001B[1;32m    846\u001B[0m                 \u001B[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    847\u001B[0m             )\n\u001B[0;32m--> 848\u001B[0;31m         return self._input_request(str(prompt),\n\u001B[0m\u001B[1;32m    849\u001B[0m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_parent_ident\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    850\u001B[0m             \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_parent_header\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/Library/Frameworks/Python.framework/Versions/3.9/lib/python3.9/site-packages/ipykernel/kernelbase.py\u001B[0m in \u001B[0;36m_input_request\u001B[0;34m(self, prompt, ident, parent, password)\u001B[0m\n\u001B[1;32m    890\u001B[0m             \u001B[0;32mexcept\u001B[0m \u001B[0mKeyboardInterrupt\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    891\u001B[0m                 \u001B[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 892\u001B[0;31m                 \u001B[0;32mraise\u001B[0m \u001B[0mKeyboardInterrupt\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Interrupted by user\"\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;32mfrom\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    893\u001B[0m             \u001B[0;32mexcept\u001B[0m \u001B[0mException\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    894\u001B[0m                 \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mlog\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwarning\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Invalid Message:\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mexc_info\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mTrue\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mKeyboardInterrupt\u001B[0m: Interrupted by user"
      ]
     }
    ],
    "source": [
     "continue_dialogue = True\n",
-    "print(\"Hi, my name is Bot and I'm an expert at Raft! \\n\"\n",
-    "      \"Ask me anything about the Raft paper published in 2014.\\n\"\n",
+    "print(\"Hi, my name is Bot! \\n\"\n",
+    "      \"I can answer FAQ about Rhodes CS tutoring.\\n\"\n",
     "      \"To end our conversation, type 'bye' or just thank me ;)\")\n",
     "\n",
     "while continue_dialogue:\n",
@@ -176,7 +168,7 @@
     "            else:\n",
     "                print(\"Bot: \", end=\"\")\n",
     "                print(generate_response(user_input))\n",
-    "                article_sentences.remove(user_input)\n",
+    "                q_tokens.remove(user_input)\n",
     "    else:\n",
     "        continue_dialogue = False\n",
     "        print(\"Bot: Bye bye!\")"
@@ -186,11 +178,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "seasonal-placement",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
